k8s_files/ingress/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 31577
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nginx
subsets:
    - addresses:
        - ip: 8.134.142.46
      ports:
        - port: 31577
