k8s_files/ingress/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/rewrite-target: /oj-file$(path)
spec:
#  ingressClassName: "traefik"
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
#          - path: /oj-file(/|$)(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: minio-master
#                port:
#                  number: 9000
